--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,43 +17,109 @@
 </head>
 
 <body>
+    <nav class="navbar fixed-top navbar-expand-lg bg-light">
+        <div class="container mt-1">
+            <a class="navbar-brand" href="/">Airfare Watcher</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto"></ul>
+                <span class="nav-item dropdown">
+                    <button class="btn btn-outline-dark" type="button" data-bs-toggle="dropdown">
+                        Logged in as: <strong><span th:text="${name}"></span></strong>
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            <span th:text="${numberOfFO}"></span>
+                            <span class="visually-hidden">IN CART</span>
+                        </span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" style="--bs-dropdown-link-active-bg: #212529;">
+                        <li><a class="dropdown-item">
+                                <form method="POST" action="/search" id="search">
+                                    <input type="hidden" name="name" data-th-value="${name}">
+                                    <button class="dropdown-item" type="submit"
+                                        style="padding: 0!important;">Search</button>
+                                </form>
+                            </a></li>
+                        <li><a class="dropdown-item">
+                                <form method="POST" action="/trackedRoutes">
+                                    <input type="hidden" name="name" data-th-value="${name}">
+                                    <button class="dropdown-item" type="submit" style="padding: 0!important;">Tracked
+                                        Flights</button>
+                                </form>
+                            </a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item">
+                                <form method="POST" action="/deleteUser">
+                                    <input type="hidden" name="name" data-th-value="${name}">
+                                    <button class="dropdown-item" type="submit" style="padding: 0!important;">Delete
+                                        User</button>
+                                </form>
+                            </a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/">Logout</a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+    </nav>
 
     <div class="container-md">
         <div class="d-flex justify-content-md-center align-items-center vh-100">
             <div class="col-md-8">
                 <p class="display-1 text-center">Start searching here!</p>
-                <form method="GET" action="/result" class="needs-validation" novalidate>
+                <form method="GET" action="/result" class="needs-validation" id="searchForm" novalidate>
                     <div class="row">
                         <div class="input-group mb-3 col">
-                            <span class="input-group-text" id="">Origin</span>
-                            <input type="text" class="form-control" placeholder="Please enter an origin airport"
-                                name="originLocationCode" required>
+                            <span class="input-group-text" id="origin">Origin</span>
+                            <input class="form-control" placeholder="Please select a departure airport"
+                                name="originLocationCode" list="aList" autocomplete="off" minlength="3" required>
                         </div>
                         <div class="input-group mb-3 col">
-                            <span class="input-group-text" id="">Destination</span>
-                            <input type="text" class="form-control" placeholder="Please enter an arrival airport"
-                                name="destinationLocationCode" required>
+                            <span class="input-group-text" id="destination">Destination</span>
+                            <input type="text" class="form-control" placeholder="Please select an arrival airport"
+                                name="destinationLocationCode" list="aList" autocomplete="off" minlength="3" required>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-group mb-3 col">
-                            <span class="input-group-text" id="">Departure Date</span>
+                            <span class="input-group-text" id="departureDate">Departure Date</span>
                             <input type="date" class="form-control" name="departureDate" data-th-min="${dateNow}"
                                 data-th-max="${dateLater}" required>
                         </div>
                         <div class="input-group mb-3 col">
-                            <span class="input-group-text" id="">Return Date</span>
+                            <span class="input-group-text" id="returnDate">Return Date</span>
                             <input type="date" class="form-control" name="returnDate" data-th-min="${dateNow}"
                                 data-th-max="${dateLater}">
                         </div>
                     </div>
-                    <select class="form-select input-group mb-3" name="travelClass" required>
-                        <option value="">Please select cabin class...</option>
-                        <option value="ECONOMY">Economy</option>
-                        <option value="PREMIUM_ECONOMY">Premium Economy</option>
-                        <option value="BUSINESS">Business</option>
-                        <option value="FIRST">First</option>
-                    </select>
+                    <div class="row">
+                        <div class="col">
+                            <select class="form-select input-group mb-3" name="travelClass" id="travelClass" required>
+                                <option value="">Please select cabin class...</option>
+                                <option value="ECONOMY">Economy</option>
+                                <option value="PREMIUM_ECONOMY">Premium Economy</option>
+                                <option value="BUSINESS">Business</option>
+                                <option value="FIRST">First</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <select class="form-select input-group mb-3" name="currencyCode" id="currencyCode" required>
+                                <option value="">Please select currency...</option>
+                                <option value="SGD">SGD</option>
+                                <option value="EUR">EUR</option>
+                                <option value="USD">USD</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="form-check form-switch mb-3">
                         <input class="form-check-input" type="checkbox" role="switch" id="" name="nonStop"> Direct
                         flights only
@@ -62,6 +128,15 @@
                     <div class="d-grid mx-auto">
                         <button type="submit" class="btn btn-dark mt-1">Search</button>
                     </div>
+                    <datalist id="aList">
+                        <span th:each="airport:${airportList}">
+                            <option th:value="${airport.iata}">
+                                <span th:text="${airport.city}+','"></span>
+                                <span th:text="${airport.name}+','"></span>
+                                <span th:text="${airport.icao}"></span>
+                            </option>
+                        </span>
+                    </datalist>
                 </form>
             </div>
         </div>
