handled dictionary null error, added refresh function to auto delete if flights not found anymore on that date

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -156,7 +156,7 @@
                                     Ensure that your return date falls after your departure date.
                                 </li>
                                 <li>
-                                    Or... Maybe there just are no flights.
+                                    Or... Maybe there just aren't any flights.
                                 </li>
                             </ul>
                         </div>
