--- a/src/main/resources/templates/trackedRoutes.html
+++ b/src/main/resources/templates/trackedRoutes.html
@@ -218,7 +218,7 @@
                                                     </td>
                                                 </tr>
                                             </table>
-                                            <p>{AI Reccomend if price is good}</p>
+                                            <p>Flight for these dates are cheap, you should book it soon!</p>
                                             <form method="POST" action="/trackedRoutes/refresh" style="display: inline-block;">
                                                 <!-- refresh button -->
                                                 <input type="hidden" name="name" data-th-value="${name}">
@@ -281,12 +281,6 @@
                                 <div class="col-auto align-self-center">
                                     <div class="card-body">
                                         <h1 class="card-title">
-                                            <!-- <span class="badge text-bg-dark"
-                                                style="display:inline-block; width:200px; height:200px; padding-top: 70px;">
-                                                <span th:text="${fo.currency}"></span>
-                                                <br>
-                                                <span th:text="${fo.totalPrice}"></span>
-                                            </span> -->
                                             <button
                                                 type="button"
                                                 class="btn btn-light btn-lg"
