added a new method for restcontroller

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -54,7 +54,8 @@
             border-color: #212529;
         }
         .ui-autocomplete {
-            max-height: 200px;
+            max-height: 300px;
+            max-width: 350px;
             overflow-y: hidden;
             overflow-x: hidden;
         }
